Fix modal z-index

--- a/style.css
+++ b/style.css
@@ -304,6 +304,8 @@ footer {
     position: fixed;
     top: 0;
     left: 0;
+    bottom: 0;
+    z-index: 100;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
